@@ -28,6 +28,8 @@ export(all_unique)
 export(as.data.frame)
 export(as_yaml)
 export(cells)
+export(check_field_length)
+export(check_number_format)
 export(check_part_whole_relation)
 export(check_that)
 export(compare)
